# conan_breakpad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
sample/: CMakeLists.txt  InvalidFunctions.cpp  InvalidFunctions.h  conanfile.py  main.cpp
solution/: ConsoleApp.sln
solution/BreakpadDll/: BreakpadDynamic.vcxproj  BreakpadFunctions.cpp  BreakpadFunctions.h
solution/BreakpadDynamic/: BreakpadDynamic.vcxproj  BreakpadDynamic.vcxproj.filters  BreakpadFunctions.cpp  BreakpadFunctions.h
solution/BreakpadLib/: BreakpadLib.cpp  BreakpadStatic.vcxproj.filters
solution/BreakpadStatic/: BreakpadStatic.cpp  BreakpadStatic.vcxproj  BreakpadStatic.vcxproj.filters
solution/ConsoleApp/: ConsoleApp.cpp  ConsoleApp.sln  ConsoleApp.vcxproj  vcpkg.json
src/: Breakpad.cpp  Breakpad.h  CMakeLists.txt  Example.cpp  Example.h
src/solution/: ConsoleApp.sln
src/solution/BreakpadDll/: BreakpadDll.vcxproj  BreakpadFunctions.cpp
src/solution/BreakpadLib/: BreakpadLib.vcxproj
src/solution/ConsoleApp/: ConsoleApp.cpp  ConsoleApp.sln
test/: CMakeLists.txt
test/ConsoleTest/: CMakeLists.txt  Program.cpp
test/UnitTest/: CMakeLists.txt  Program.cpp
